--- a/README.me
+++ b/README.me
@@ -1,1 +1,9 @@
-texxx
+It is the RESTful webservices of a navigation taxi service system. Technologies which have been used in this project are:
+•	Java EE
+•	Spring IOC
+•	RESTful Web services
+•	Oracle
+•	Hibernate
+•	JPA
+•	IntelliJ IDEA
+•	NoSQL/MongoDB
